Homework7/manifests/MainService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework7mainservice
  labels:
    app: homework7mainservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework7mainservice
  template:
    metadata:
      labels:
        app: homework7mainservice
    spec:
      containers:
      - name: homework7mainservice
        image: flash1200/homework7_mainservice:firstversion
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
