Homework7/manifests/MainService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework7mainservice
  labels:
    app: homework7mainservice
spec:
  type: LoadBalancer
  ports:
  - name: homework7-http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: homework7-https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: homework7mainservice
